# ebobot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
Arduino/main/: main.ino
action/: Move.action
config/: new.rviz  pid_settings.txt  rviz.rviz
config/calls/: calls_dict.yaml
config/nodes/: arduino_odom.yaml  boba_arduino_odom.yaml  boba_laser_scan_callback.yaml  costmap_server.yaml  global_config.yaml  laser_scan_callback.yaml  new_task_manager.yaml  planers.yaml  task_manager.yaml
config/routes/: available_commands.txt  biba_route1.yaml  biba_route2.yaml  biba_test1.yaml  biba_test2.yaml  boba_init_test.yaml  boba_route1.yaml  boba_route2.yaml  boba_test1.yaml  boba_test2.yaml  calls_dict.yaml  dor_test.yaml  example_route.yaml  new_route.yaml  new_route1.yaml  new_route2.yaml  test_route.yaml  test_route0.yaml  test_route1.yaml  test_route2.yaml
config/routes/calls/: calls_dict.yaml
config/scripts/: motors.yaml  pid_settings.txt  servos.yaml
firmware/: CMakeLists.txt  FaBoPWM_PCA9685.cpp  FaBoPWM_PCA9685.h  dirname  install.sh  main.cpp  main.ino
firmware/FaBo_PWM_PCA9685/: README.md  keywords.txt  library.properties
firmware/FaBo_PWM_PCA9685/example/RotationServo/: RotationServo.ino
firmware/FaBo_PWM_PCA9685/example/servo/: servo.ino
firmware/lite_main/: lite_main.ino  pin_reader.h  servos.h
firmware/main/: DorSettings.h  dor_mot.h  kadyrov_lcd.h  main.ino  motors.h  new_motors.cpp  new_motors.h  ohm_reader.h  pin_reader.h  servos.h  start_trigger.h  test_motors.cpp  test_motors.h
firmware/secondary/: kadyrov_lcd.h  secondary.ino  servos.h
launch/: arduino.launch  arduino_odom.launch  costmap.launch  ebobot.launch  eurobot.launch  eurobot1.launch  eurobot_biba.launch  eurobot_boba.launch  laser_callback.launch  move_base.launch  move_base_no_laser.launch  move_base_test.launch  new_task_manager.launch  planers.launch  robot_model.launch  rviz.launch  task_manager.launch  test.launch
libraries/: DorLib.py  setup.py
libraries/DorLib/: DorLib.py
libraries/Dorvect/: Dorvect.py  README.md
libraries/Png/: Png.py  README.md
libraries/png/: README.md  png.py
main_ros/: main_ros.ino
msg/: MotorPinLayout.msg  MotorsInfo.msg  NewMotorPlain.msg  Obstacle.msg  Obstacles.msg  PID.msg  obstacle.msg  obstacles.msg
nodes/: available_commands.txt  costmap_server.py  costmap_test.yaml  experimetal_task_manager.py  global_planer.py  laser_scan_callback.py  local_planer.py  motors_info_callback.py  move_base.py  new_task_manager.py  png_to_array.py  task_manager.py  tf.py
nodes/routes/: route1.yaml
pid_msg/: pid_msg.h
scripts/: motors_setup.py  move_base.py  pid_setter.py  pid_settings.txt  servos_setter.py
src/: DorLib.py  Dorlib.py  calls_dict.py  calls_executer.py  costmap_server.py  dorlib.py  eb_odom.py  global_planer.py  local_planer.py  markers.py  motors_info_callback.py  pid_setter.py  pid_settings.txt  tasks_executer.py  test.py  test_listen.py  test_pub.py
src/move_base/: costmap_server.py  global_planer.py  local_planer.py
srv/: ChangeCost.srv  LcdShow.srv  Lcd_show.srv  NewMotor.srv  OhmReader.srv  PIDSettings.srv  PinReader.srv  Servos.srv  ServosSettings.srv  SetMoveTarget.srv
temp/: CmakeLists.txt  makers.py  motors.h  new_motors.cpp  new_motors.h  rviz.rviz
urdf/: ebobot.urdf
